--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,27 +1,32 @@
-<div class="row row-product-form">
-  <%= simple_form_for @product, remote: true do |f| %>
-    <%= f.error_notification %>
-    <div class="col-xs-12 col-sm-6">
-      <%= f.input :name %>
-      <%= f.input :reference %>
-      <%= f.association :category %>
-      <%= f.input :price %>
-      <%= f.input :deposit %>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-      <%= f.input :characteristics %>
-      <%= f.input :technical_sheet %>
-      <div class="row">
-        <div class="col-xs-12 col-sm-6">
-          <%= f.input :photo %>
-          <%= f.input :photo_cache, as: :hidden %>
-        </div>
-        <div class="col-xs-12 col-sm-6">
-          <%= f.input :video %>
-        </div>
+<%= simple_form_for @product, remote: true do |f| %>
+  <%= f.error_notification %>
+  <div class="col-xs-12 col-sm-6">
+    <%= f.input :name %>
+    <span class="error" id="name-error"></span>
+    <%= f.input :reference %>
+    <span class="error" id="reference-error"></span>
+    <%= f.association :category %>
+    <span class="error" id="category_id-error"></span>
+    <%= f.input :price %>
+    <span class="error" id="price-error"></span>
+    <%= f.input :deposit %>
+  </div>
+  <div class="col-xs-12 col-sm-6">
+    <%= f.input :features %>
+    <%= f.input :description %>
+    <%= f.input :technical_sheet %>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6">
+        <%= f.input :photo %>
+        <%= f.input :photo_cache, as: :hidden %>
+        <span class="error" id="photo-error"></span>
       </div>
-      <%= f.input :loxam_link %>
-      <%= f.button :submit, class: 'loxam-btn btn-create-product' %>
+      <div class="col-xs-12 col-sm-6">
+        <%= f.input :video %>
+      </div>
     </div>
-  <% end %>
-</div>
+    <%= f.input :loxam_link %>
+    <%= f.button :submit, class: 'loxam-btn btn-create-product' %>
+  </div>
+<% end %>
+
