--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -101,7 +101,7 @@
   }
 }
 
-/// Message section
+/// Category section
 .container-form-new-category {
   margin: 50px 0;
 }
@@ -130,6 +130,11 @@
       font-size: 14px;
     }
   };
+  .category-name {
+    display: flex;
+    height: 30px;
+    align-items: center;
+  };
   .category-actions {
     display: flex;
     justify-content: space-between;
@@ -147,7 +152,28 @@
     height: 70%;
     background-size: cover;
     background-position: center;
+  };
+}
+
+.fa-trash, .fa-edit {
+  font-size: 18px;
+  border: 1px solid $loxam-color;
+  padding: 5px;
+  border-radius: 3px;
+  color: #fff;
+  background-color: $loxam-color;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  &:hover {
+    color: $loxam-color;
+    background-color: #fff;
   }
+};
+
+.fa-edit {
+  right: 45px;
+  top: 15px;
 }
 
 .row-product-form {
@@ -177,7 +203,7 @@
   flex-direction: column;
   justify-content: space-between;
   .product-card-image {
-    height: 20%;
+    height: 35%;
   };
   .card-infos {
     height: auto;
@@ -188,5 +214,36 @@
     li {
       margin: 5px 0;
     }
+  }
+}
+
+.pop-up-product {
+  display: none;
+  position: fixed;
+  border-radius: 3px;
+  box-shadow: 2px 2px 6px rgba(100,100,100,0.1);
+  z-index: 9;
+  background-color: $light-gray;
+  top: 0;
+  right: 5%;
+  left: 5%;
+  width: 90%;
+}
+
+.pop-up-product-active {
+  display: block;
+}
+
+.fa-edit {
+  cursor: pointer;
+}
+
+.close-popup {
+  margin: 15px;
+  font-size: 32px;
+  color: $loxam-color;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.6;
   }
 }
