--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,7 +4,11 @@
     <% @products.each do |product| %>
       <div class="col-xs-12 col-sm-6 col-md-3 col-product-card">
         <div class="product-card">
-          <div class="product-card-image" style="background-image: url('<%= cl_image_path product.photo %>'); "></div>
+          <% if product.photo? %>
+            <div class="product-card-image" style="background-image: url('<%= cl_image_path product.photo %>'); "></div>
+          <% else %>
+            <div class="product-card-image" style="background-image: url('https://loremflickr.com/cache/resized/4493_37892718232_c54293c193_320_240_nofilter.jpg'); "></div>
+          <% end %>
           <div class="card-infos">
           <h3><%= product.name %></h3>
             <div class="card-price-and-btn">
