--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,8 +1,12 @@
 <h1><%= @product.name %></h1>
 <p>Réf: <%= @product.reference %></p>
 <p><strong>Category: <%= @product.category %></strong></p>
-<%= cl_image_tag @product.photo %>
-<p>Characteristics: - <%= @product.characteristics %></p>
+<% if @product.photo? %>
+  <%= cl_image_tag @product.photo %>
+<% else %>
+  <img src="https://loremflickr.com/cache/resized/4493_37892718232_c54293c193_320_240_nofilter.jpg" alt="default_photo">
+<% end %>
+<p>Caractéristiques: - <%= @product.features %></p>
 <p>Déscription <%= @product.description %></p>
 <p><strong>Prix <%= @product.price %> € / jour</strong>, Déposit <%= @product.deposit %> €</p></li>
 
