edit product fixed

--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -37,213 +37,6 @@
   color: $loxam-color;
 }
 
-
-/// Message section
-.container-messages {
-  color: $font-color;
-  p {
-    margin: 30px 0;
-  };
-}
-
-.container-messages-body {
-  height: 800px;
-  overflow: scroll;
-}
-
-.message-display-part {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  font-size: 14px;
-  margin: 10px 0;
-  &:hover {
-    background-color: #ccc;
-  }
-}
-
-.message-hidden-part {
-  display: none;
-}
-
-.notification {
-  background-color: #fff;
-  color: $loxam-color;
-  border: 1px solid $loxam-color;
-  border-radius: 50%;
-  width: 35px;
-  height: 35px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: -35%;
-  left: -8%;
-}
-
-.message-actions {
-  display: flex;
-  width: 20%;
-  justify-content: space-between;
-}
-
-.container-show-message {
-  background-color: #fff;
-  padding: 15px;
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  border-radius: 2px;
-}
-
-@media screen and (max-width: 991px) {
-  .dashboard-body, .container-show-message {
-    top: 85px;
-    position: relative;
-  }
-}
-
-/// Category section
-.container-form-new-category {
-  margin: 50px 0;
-}
-
-.row-category {
-  margin: 5px 0;
-  padding: 5px;
-  font-size: 16px;
-  &:nth-child(n+1) {
-    background: $light-gray;
-  };
-  p {
-    margin-bottom: 0;
-  };
-  form {
-    display: flex;
-    align-items: center;
-    .form-group, input {
-      margin: 0;
-    };
-    .form-group {
-      margin-right: 10px;
-    };
-    input {
-      height: 30px;
-      font-size: 14px;
-    }
-  };
-  .category-name {
-    display: flex;
-    height: 30px;
-    align-items: center;
-  };
-  .category-actions {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-
-/// Materiels section
-.product-box-dashboard {
-  height: 320px;
-  background-color: $light-gray;
-  padding: 10px;
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  border-radius: 2px;
-  .product-img-dashboard {
-    height: 70%;
-    background-size: cover;
-    background-position: center;
-  };
-}
-
-.fa-trash, .fa-edit {
-  font-size: 18px;
-  border: 1px solid $loxam-color;
-  padding: 5px;
-  border-radius: 3px;
-  color: #fff;
-  background-color: $loxam-color;
-  position: absolute;
-  right: 15px;
-  top: 15px;
-  &:hover {
-    color: $loxam-color;
-    background-color: #fff;
-  }
-};
-
-.fa-edit {
-  right: 45px;
-  top: 15px;
-}
-
-.row-product-form {
-  display: none;
-}
-
-#add-product {
-  font-size: 28px;
-  cursor: pointer;
-  color: $loxam-color;
-  transition: all 0.3s;
-  &:hover {
-    transform: rotate(90deg);
-  }
-}
-
-.add-a-product-title {
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-.product-card-dashboard {
-  font-size: 14px;
-  text-align: center;
-  height: 600px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  .product-card-image {
-    height: 35%;
-  };
-  .card-infos {
-    height: auto;
-  };
-  ul {
-    list-style: none;
-    padding: 0;
-    li {
-      margin: 5px 0;
-    }
-  }
-}
-
-.pop-up-product {
-  display: none;
-  position: fixed;
-  border-radius: 3px;
-  box-shadow: 2px 2px 6px rgba(100,100,100,0.1);
-  z-index: 9;
-  background-color: $light-gray;
-  top: 0;
-  right: 5%;
-  left: 5%;
-  width: 90%;
-}
-
-.pop-up-product-active {
-  display: block;
-}
-
-.fa-edit {
-  cursor: pointer;
-}
-
-.close-popup {
-  margin: 15px;
-  font-size: 32px;
-  color: $loxam-color;
-  cursor: pointer;
-  &:hover {
-    opacity: 0.6;
-  }
-}
+@import "dashboard/messages";
+@import "dashboard/categories";
+@import "dashboard/products";
