--- a/app/views/dashboard/_dashboard_produts.html.erb
+++ b/app/views/dashboard/_dashboard_produts.html.erb
@@ -22,9 +22,9 @@
           <% end %>
           </div>
           <div class="card-infos">
-          <h3><%= product.name %></h3>
+            <h3><%= product.name %></h3>
           </div>
-          <ul>
+          <ul class="card-infos-list">
             <li><strong>Référence:</strong> <%= product.reference %></li>
             <li><strong>Catégorie:</strong> <%= product.category.name %></li>
             <li><strong>Prix:</strong> <%= product.price %>€/jour</li>
