--- a/app/views/dashboard/_dashboard_users.html.erb
+++ b/app/views/dashboard/_dashboard_users.html.erb
@@ -1,4 +1,4 @@
-<div class="dashboard-section dashboard-stats-section" data-section="users">
+<div class="dashboard-section dashboard-users-section" data-section="users">
   <h3>Clients</h3>
   <ul>
     <% @users.each do |user| %>
