--- a/app/views/dashboard/_dashboard_stats.html.erb
+++ b/app/views/dashboard/_dashboard_stats.html.erb
@@ -1,3 +1,3 @@
-<div class="dashboard-section dashboard-promos-section dashboard-section-active" data-section="stats">
+<div class="dashboard-section dashboard-stats-section dashboard-section-active" data-section="stats">
   <h3>Stats</h3>
 </div>
