--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -52,6 +52,7 @@
   background-color: $loxam-color;
   position: absolute;
   right: 15px;
+  top: 15px;
   &:hover {
     color: $loxam-color;
     background-color: #fff;
