--- a/app/views/dashboard/_dashboard_stats.html.erb
+++ b/app/views/dashboard/_dashboard_stats.html.erb
@@ -1,3 +1,4 @@
 <div class="dashboard-section dashboard-stats-section dashboard-section-active" data-section="stats">
   <h3>Stats</h3>
+  <canvas id="myChart"></canvas>
 </div>
