--- a/app/views/dashboard/_dashboard_produts.html.erb
+++ b/app/views/dashboard/_dashboard_produts.html.erb
@@ -80,6 +80,7 @@
             <%= f.input :price %>
             <span class="error" id="price-error"></span>
             <%= f.input :deposit %>
+            <%= f.check_box :best_searches_choice, as: :boolean %>
           </div>
           <div class="col-xs-12 col-sm-6">
             <%= f.input :features %>
