--- a/app/views/dashboard/_dashboard_stats.html.erb
+++ b/app/views/dashboard/_dashboard_stats.html.erb
@@ -1,7 +1,7 @@
 <div class="dashboard-section dashboard-stats-section dashboard-section-active" data-section="stats">
   <div class="row">
     <h3 class="text-center">Catégories les plus consultées</h3>
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-xs-12 col-sm-5">
       <ul class="ranking-list">
         <% i = 0 %>
         <% @categories_hashes.each do |category| %>
@@ -10,16 +10,16 @@
         <% end %>
       </ul>
     </div>
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-xs-12 col-sm-7">
       <canvas id="myChartCategories" data-category-name="<%= @categories_names.first(5)%>" data-nb-searches="<%= @categories_nb_of_searches.first(5) %>"></canvas>
     </div>
   </div>
   <div class="row">
     <h3 class="text-center">Matériels les plus consultés</h3>
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-xs-12 col-sm-7">
       <canvas id="myChartProducts" data-product-name="<%= @products_most_searched %>" data-nb-searches="<%= @products_nb_searches %>"></canvas>
     </div>
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-xs-12 col-sm-5">
       <ul class="ranking-list">
         <% j = 0 %>
         <% @products_raking.each do |product| %>
@@ -31,8 +31,16 @@
   </div>
     <div class="row">
     <h3 class="text-center">Matériels les plus sauvegardés</h3>
-    <div class="col-xs-12 col-sm-6"></div>
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-xs-12 col-sm-5">
+      <ul class="ranking-list">
+        <% j = 0 %>
+        <% @products_raking.each do |product| %>
+          <span><% j += 1 %>
+          <li><span><strong><%= j %></strong>&nbsp;&nbsp;<%= product.name %></span> <span><strong><%= product.nb_of_searches %></strong></span></li>
+        <% end %>
+      </ul>
+    </div>
+    <div class="col-xs-12 col-sm-7">
       <canvas id="myChartSavedProducts" data-product-name="<%= @products_most_searched %>" data-nb-saved="<%= @products_nb_searches %>"></canvas>
     </div>
   </div>
