--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,12 +2,12 @@
   <h1><%= @category.name %></h1>
   <div class="row">
     <% @products.each do |product| %>
-      <div class="col-xs-12 col-sm-6 col-md-3 col-product-card">
-        <div class="product-card">
+      <div class="col-xs-12 col-sm-6 col-md-3 col-item-card">
+        <div class="item-card">
           <% if product.photo? %>
-            <div class="product-card-image" style="background-image: url('<%= cl_image_path product.photo %>'); "></div>
+            <div class="item-card-image" style="background-image: url('<%= cl_image_path product.photo %>'); "></div>
           <% else %>
-            <div class="product-card-image" style="background-image: url('https://loremflickr.com/cache/resized/4493_37892718232_c54293c193_320_240_nofilter.jpg'); "></div>
+            <div class="item-card-image" style="background-image: url('https://loremflickr.com/cache/resized/4493_37892718232_c54293c193_320_240_nofilter.jpg'); "></div>
           <% end %>
           <div class="card-infos">
           <h3><%= product.name %></h3>
