working on expandable model

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,10 +13,9 @@
       <p>Réf: <%= @product.reference %></p>
       <br>
       <p>Caractéristiques:</p>
-      <%= @product.features %>
-      <br>
+      <p><%= @product.features %></p>
       <p>Déscription <%= @product.description %></p>
-      <p>Déposit <%= @product.deposit %> €</p></li>
+      <p>Déposit <%= @product.deposit %> €</p>
     </div>
   </div>
 
