trying new things on product page desing

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,6 +2,7 @@
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag 'logo' %>
+    <a href="tel:+33495602364">04 95 60 23 64</a>
   <% end %>
 
   <!-- Search bar centered -->
