--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,11 @@
 <div class="container main-container">
+  <!-- Voir aussi autres loxam -->
+  <div class="row loxam-types-container">
+    <div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><%= image_tag 'loxam-module' %></a></div>
+    <div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><%= image_tag 'loxam-power' %></a></div>
+    <div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><%= image_tag 'loxam-tp' %></a></div>
+    <div class="col-xs-12 col-sm-6 col-md-3"><a href="#"><%= image_tag 'loxam-access' %></a></div>
+  </div>
   <div class="row main-row">
     <div class="col-sm-12 col-md-7 col-best-searches">
       <!-- Les plus recherchés -->
